<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sensor</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="label_current">現在</string>
    <string name="label_highest">最高</string>
    <string name="label_lowest">最低</string>
    <string name="init_current">000</string>
    <string name="init_highest">000</string>
    <string name="init_lowest">000</string>
    <string name="label_device">Device</string>
    <string name="label_rssi">RSSI</string>
    <string name="init_device">noconnect</string>
    <string name="init_rssi">000</string>
    <string name="action_about">About</string>
    <string name="dialog_title">About</string>
    <string name="dialog_message">version</string>
    <string name="dialog_button">OK</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_sensor_setting">Setting</string>

</resources>
